--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .video-detail .details {
-  margin-top: 10px 0 20px 0;
+  margin: 10px 0 20px 0;
   padding: 10px;
   border 1px solid #ddd;
   border-radius: 4px;
