--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,11 @@
   }
 }
 
-ul.list-group-item.col-sm-6 {
+.list-group-item.col-sm-6 {
   margin: 0 15px 15px 0;
+}
+
+.img-book {
+  border: 1px solid #333;
+  margin-bottom: 5px;
 }
